# amazon-q-developer-workshop

./: README.md  devfile.yaml
csharp/QWORDSCSHARP/: QWORDSCSHARP.csproj  QWORDSCSHARP.sln
csharp/QWORDSCSHARPTEST/: QWORDSCSHARPTEST.csproj  QWORDSCSHARPTEST.sln  WordListTest.cs
frontend/java/: exclude.lst
java/prompts/: readme.md
nodejs/: README.md  app.js  index.js  jest.config.js  package-lock.json  package.json  run-local-app.sh  run-workshop-app.sh  server.js
nodejs/controllers/: GameController.js  HomeController.js
prompts/: codeanalysis.md  gameplay.md  javadocs.md  plantuml.md  projectstructure.xml  review_md.md  security-analysis.yaml  test-generation.md  testcases.md  unittests.md  wellarchitected.md
python/: .gitignore  app.py  config.py  pyproject.toml  pytest.ini  requirements.txt  run-local-app.cmd  run-local-app.sh
python/Qwords/: __init__.py  errors.py
python/Qwords/controllers/: GameController.py  HomeController.py
python/Qwords/models/: GameStatus.py  Word.py
python/Qwords/repositories/: WordList.py
python/Qwords/services/: WordSelectionService.py
python/Qwords/static/: swagger.json
python/Qwords/static/js/: game.js
python/Qwords/templates/: error.html  game.html  home.html  layout.html
python/Qwords/templates/errors/: 404.html  500.html
python/Qwords/utils/: url_utils.py
python/tests/: conftest.py  test_game.py  test_wordlist.py
scripts/: install-amazonq.sh
typescript/: GettingStarted.md  README.md  app.ts  config.ts  index.ts  jest.config.js  package-lock.json  package.json  run-local.sh  tsconfig.json
(+36 files in other folders)
